# pony

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MBOX_REFACTOR_PLAN.md  README.md  config-sample.toml  mkdocs.yml  pony.spec  pony_entry.py  pyproject.toml
.github/workflows/: docs.yml  release-build.yml  release.yml
ai/: AGENTS.md  ARCHITECTURE.md  CONVENTIONS.md  DB_CHANGE.md  MCP.md  RELEASE_WORKFLOW_PLAN.md  SECURITY.md  SIMPLIFICATIONS.md  SPECIFICATIONS.md  STATUS.md  SYNCHRONIZATION.md  SYNC_AUDIT.md  TUI_TESTING_PLAN.md
docs/: architecture.md  cli.md  composer.md  configuration.md  contacts.md  development.md  index.md  mcp-server.md  synchronization.md  tui.md
icons/: pony-express.icns
installers/linux/: pony.desktop
installers/windows/: pony.iss
scripts/: bench_mbox_toc.py  build.py  capture_screenshots.py  demo_seed.py
src/pony/: __init__.py  __main__.py  bbdb.py  cli.py  config.py  credentials.py  domain.py  fixture_flow.py  folder_utils.py  html_sanitize.py  imap_client.py  index_store.py  mcp_server.py  message_copy.py  message_projection.py  paths.py  protocols.py  services.py  smtp_sender.py  storage.py  storage_indexing.py  sync.py  version.py
src/pony/tui/: __init__.py  app.py  bindings.py  compose_utils.py  message_renderer.py  pdf_export.py  search_parser.py  terminal.py
src/pony/tui/screens/: add_attachment_screen.py  attachment_picker_screen.py  compose_screen.py  confirm_screen.py  contact_browser_screen.py  contact_detail_screen.py  contact_edit_screen.py  dialog_screen.py  eml_viewer_screen.py  floating_input_screen.py  goto_folder_screen.py  help_screen.py  link_action_screen.py  main_screen.py  new_folder_screen.py  pick_folder_screen.py  save_draft_screen.py  save_folder_picker_screen.py  save_message_screen.py  search_dialog_screen.py  sync_confirm_screen.py
src/pony/tui/widgets/: contact_suggester.py  folder_panel.py  message_list.py  message_view.py
tests/: conftest.py  corpus.py  test_add_attachment_screen.py  test_attachment_extraction.py  test_attachment_picker.py  test_attachment_save.py  test_cli.py  test_cli_account_cmds.py  test_cli_compose_contacts.py  test_cli_summary_mirror.py  test_cli_sync_cmd.py  test_compose_utils.py  test_config.py  test_contacts.py  test_copy_sync.py  test_credentials.py  test_fixture_flow.py  test_folder_panel.py  test_folder_utils.py  test_html_sanitize.py  test_imap_client.py  test_index_store.py  test_link_rendering.py  test_mcp_server.py  test_message_copy.py  test_message_projection.py  test_mirror_integrity.py  test_move_sync.py  test_paths.py  test_pdf_export.py  test_render_markdown.py  test_save_message_screen.py  test_screens.py  test_search_parser.py  test_services.py  test_storage_conformance.py  test_storage_indexing.py  test_sync.py  test_tui_flows.py  test_tui_terminal.py  (+1 more)
